# claude-plan-reviewer

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  README.md  build.rs  install.sh
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.claude/agents/: gsd-ai-researcher.md  gsd-code-fixer.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/gsd/: add-backlog.md  add-phase.md  add-tests.md  add-todo.md  ai-integration-phase.md  analyze-dependencies.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  capture.md  check-todos.md  cleanup.md  code-review-fix.md  code-review.md  complete-milestone.md  config.md  debug.md  discuss-phase.md  do.md  docs-update.md  eval-review.md  execute-phase.md  explore.md  extract-learnings.md  fast.md  forensics.md  graphify.md  health.md  help.md  import.md  inbox.md  ingest-docs.md  insert-phase.md  intel.md  list-phase-assumptions.md  list-workspaces.md  manager.md  (+46 more)
.claude/gsd-migration-journal/: 2026-05-19T19-34-36-804Z-64a8e3bfab54e6d3.json
.githooks/: pre-commit
.github/: build-setup.yml
.github/workflows/: ci.yml  release.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: edit-mode-bubble-position.md
.planning/milestones/: v0.1.0-REQUIREMENTS.md  v0.5.0-REQUIREMENTS.md  v0.5.0-ROADMAP.md  v0.7.0-MILESTONE-AUDIT.md  v0.7.0-REQUIREMENTS.md  v0.7.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  CODEX-INTEGRATION.md  COPILOT-INTEGRATION.md  FEATURES.md  GEMINI-INTEGRATION.md  INTEGRATION-PLUGIN-REWORK.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: diff_api.rs  hook.rs  install.rs  integration.rs  main.rs  plan_review.rs  render.rs  server.rs  uninstall.rs  update.rs
src/integrations/: claude.rs  gemini.rs  mod.rs  opencode.rs  opencode_plugin.mjs
tests/fixtures/: hook_input_claude.json  hook_input_gemini.json
tests/integration/: code_review_subcommand.rs  install_uninstall.rs  main.rs  review_subcommand.rs  server_cycle.rs
ui/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
ui/src/: App.tsx  index.css  main.tsx  types.ts
(+568 files in other folders)
