[package]
name = "claude-plan-reviewer"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/themouette/claude-plan-reviewer"

[[bin]]
name = "plan-reviewer"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt", "macros", "net", "time", "sync", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
rust-embed = { version = "8", features = ["axum"] }
axum-embed = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = { version = "0.52", default-features = false }
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
ammonia = "4"
clap = { version = "4", features = ["derive"] }
webbrowser = "1"
self_update = { version = "0.44", default-features = false, features = ["archive-tar", "compression-flate2", "reqwest", "rustls"] }
dialoguer = "0.12"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
ureq = { version = "3", features = ["json"] }

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-musl"]
# Path that installers should place binaries in
install-path = "~/.local/bin"
unix-archive = ".tar.gz"
github-build-setup = "../build-setup.yml"
# Whether to install an updater program
install-updater = false
# Allow manually edited CI files (macOS codesign step)
allow-dirty = ["ci"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
